# dna

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  clippy.toml  deny.toml  lefthook.yml  omen.toml  release-please-config.json  renovate.json  rustfmt.toml  tarpaulin.toml
.cargo/: config.toml
.claude-flow/: daemon-state.json  daemon.pid
.claude-flow/metrics/: codebase-map.json  consolidation.json
.claude-plugin/: CHANGELOG.md  marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  omen.yml  release.yml  scorecard.yml
crates/dna/: Cargo.toml
crates/dna-cli/: Cargo.toml
crates/dna-cli/src/: main.rs
crates/dna-cli/src/cli/: artifact.rs  config.rs  context.rs  init.rs  kind.rs  label.rs  mcp.rs  mod.rs  render.rs  search.rs  version.rs
crates/dna-cli/tests/: diff_command.rs  kind_workflow.rs
crates/dna-server/: Cargo.toml
crates/dna-server/src/: api.rs  auth.rs  main.rs  mcp.rs  state.rs
crates/dna/src/: lib.rs  testing.rs
crates/dna/src/db/: lance.rs  mod.rs  schema.rs
crates/dna/src/embedding/: mod.rs  openai.rs  provider.rs
crates/dna/src/mcp/: handler.rs  mod.rs
crates/dna/src/render/: mod.rs
crates/dna/src/services/: artifact.rs  config.rs  kind.rs  mod.rs  search.rs  types.rs
crates/dna/tests/: kind_workflow.rs
docs/: cli.md  versioning.md
docs/plans/: 2025-01-27-dna-cli-design.md
docs/templates/: agentic.md  ai-safety.md  intent.md
e2e/: integration_test.rs
e2e/fixtures/: mod.rs
e2e/integration/: cli_commands_test.rs  kind_workflow_test.rs  mcp_server_test.rs  render_test.rs  search_test.rs
examples/: basic_usage.rs  service_usage.rs
plugins/core/: CHANGELOG.md  README.md  plugin.json
plugins/core/skills/capturing-artifacts/: SKILL.md
plugins/core/skills/checking-truth/: SKILL.md
plugins/core/skills/edit-dna/: SKILL.md
plugins/core/skills/managing-kinds/: SKILL.md
plugins/core/skills/managing-labels/: SKILL.md
plugins/core/skills/planning-with-truth/: SKILL.md
plugins/core/skills/searching-artifacts/: SKILL.md
plugins/core/skills/validating-approach/: SKILL.md
plugins/intent/: CHANGELOG.md  README.md  plugin.json
plugins/intent/agents/: algorithm-discoverer.md  compliance-discoverer.md  constraint-discoverer.md  contract-discoverer.md  escalation-discoverer.md  evaluation-discoverer.md  glossary-discoverer.md  integration-discoverer.md  intent-discoverer.md  monitor-discoverer.md  pace-discoverer.md  reporting-discoverer.md  tradeoff-discoverer.md  truth-judge.md
plugins/intent/commands/: README.md  discover-truth.md  extract-truth.md
plugins/intent/reference/: kinds.md
plugins/intent/skills/composing-specifications/: SKILL.md
plugins/intent/skills/reviewing-compliance/: SKILL.md
plugins/intent/skills/writing-algorithms/: SKILL.md
plugins/intent/skills/writing-constraints/: SKILL.md
plugins/intent/skills/writing-contracts/: SKILL.md
plugins/intent/skills/writing-escalations/: SKILL.md
plugins/intent/skills/writing-evaluations/: SKILL.md
plugins/intent/skills/writing-intents/: SKILL.md
plugins/intent/skills/writing-tradeoffs/: SKILL.md
src/: lib.rs  main.rs
src/cli/: artifact.rs  config.rs  init.rs  mcp.rs  mod.rs  render.rs  search.rs
src/db/: lance.rs  mod.rs  schema.rs
src/embedding/: local.rs  mod.rs  ollama.rs  openai.rs
src/mcp/: mod.rs
src/services/: config.rs  search.rs  types.rs
