[workspace]
members = ["crates/dna", "crates/dna-cli", "crates/dna-server"]
resolver = "2"

[workspace.package]
version = "0.3.5"
edition = "2021"
rust-version = "1.91"
authors = ["DNA Team"]
license = "MIT"
repository = "https://github.com/panbanda/dna"
homepage = "https://github.com/panbanda/dna"

[workspace.dependencies]
# Internal
dna = { path = "crates/dna", version = "0.3.5" }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Database
lancedb = { version = "0.23", features = ["remote"] }
arrow-array = "56.0"
arrow-schema = "56.0"

# Embedding - Local (Candle)
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.4"
tokenizers = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# Utilities
nanoid = "0.4"
slug = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Crypto
subtle = "2.6"

# Diffing
similar = "2.6"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAPI
utoipa = { version = "5", features = ["chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Dev dependencies
tempfile = "3.14"
tokio-test = "0.4"
mockall = "0.14"
assert_fs = "1.1"
predicates = "3.1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
