[package]
name = "dna-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Truth artifact management CLI with vector search for AI agents and developers"
keywords = ["cli", "vector-search", "ai", "mcp", "artifacts"]
categories = ["command-line-utilities"]

[[bin]]
name = "dna"
path = "src/main.rs"

[dependencies]
# Internal
dna = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Utilities
chrono = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# MCP
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "8d09f88", features = ["server", "macros", "transport-io"] }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2.0"
predicates = { workspace = true }
regex = "1.10"
serial_test = "3.0"
