[package]
name = "dna-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Truth artifact management server"

[[bin]]
name = "dna-server"
path = "src/main.rs"

[dependencies]
# Internal
dna = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
