[package]
name = "dna-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Truth artifact management server"

[[bin]]
name = "dna-server"
path = "src/main.rs"

[dependencies]
# Internal
dna = { workspace = true, features = ["openapi"] }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Lambda
lambda_http = "1.0"

# MCP over HTTP
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "8d09f88", features = ["server", "macros", "transport-streamable-http-server", "schemars"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
figment = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Crypto
subtle = { workspace = true }

# Utilities
chrono = { workspace = true }

# OpenAPI
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
