[package]
name = "dna"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Truth artifact management library with vector search for AI agents and developers"
documentation = "https://docs.rs/dna"
keywords = ["vector-search", "ai", "mcp", "artifacts"]
categories = ["development-tools"]

[[example]]
name = "basic_usage"
path = "../../examples/basic_usage.rs"

[[example]]
name = "service_usage"
path = "../../examples/service_usage.rs"

[dependencies]
# Database
lancedb = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# Embedding - Local (Candle)
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
tokenizers = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Configuration
figment = { workspace = true }

# Utilities
nanoid = { workspace = true }
slug = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# MCP Server
serde-jsonlines = { workspace = true }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1.0"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
mockall = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true }
